Updated html file, wrote tests, minor adjustments to parser

--- a/tests/files/chi_police_retirement.html
+++ b/tests/files/chi_police_retirement.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -83,7 +84,7 @@ Release Date: August 2010
 <p class="auto-style1">Policemen's Annuity and</p>
 <p class="auto-style2">Benefit Fund of Chicago</p>
 </div>
-		<img alt="Master_Image" src="../images/Master_Image.jpg" class="auto-style3" height="110" width="380" align="top" /></div>
+		<img alt="Master_Image" src="../images_PABF/Master_Image.jpg" class="auto-style3" height="110" width="380" align="top" /></div>
 </div>
 
 <div class="wrapper row3">
@@ -96,10 +97,10 @@ Release Date: August 2010
 <li><a href="Investments_RFP_Search(X).html">RFP Inquires</a></li>
 <li><a href="ActiveMembers.html">Active Members</a></li>
 <li><a href="RetiredMembers.html">Retired Members</a></li>
-<li><a href="news.html">News &amp; Events</a></li>
+<li><a href="MonthlyMeetings.html">Monthly Meetings</a></li>
 
 </ul>
-<!--webbot bot="Include" i-checksum="37175" endspan --></div>
+<!--webbot bot="Include" i-checksum="64621" endspan --></div>
 </div>
 
 <div class="wrapper row4">
@@ -118,98 +119,98 @@ Release Date: August 2010
 	   	<h1>Monthly Meetings</h1>
 		<p>
 		Listed below are the dates scheduled for the regular Board meetings<br/>
-	    of  The Policemenâs Annuity &amp; Benefit Fund.<br/>
+	    of  The Policemen’s Annuity &amp; Benefit Fund.<br/>
  		All meetings are scheduled to begin at 9:00 A.M., and are to be held<br/>
 	    in the office of the Fund.</p>
 <div class="contentleft">
-		<h2>2019 Investment Meeting</h2>
+		<h2>2019 Committees  Meetings</h2>
 <!--		<p>&Dagger; REVISED 2/29/2016<br/>&dagger; REVISED 4/25/2016</p> -->
 		<table border="1">
 		<tr>
-		<td style="height: 25px">Monday</td>
-		<td style="height: 25px; width: 98px;">January</td>
-		<td style="height: 25px">28</td>
-		<td style="height: 25px; width: 92px;">9:00a.m.</td>
+		<td style="height: 25px">Investment</td>
+		<td style="height: 25px; width: 98px;">January 28th</td>
+		<td style="height: 25px; width: 24px;">9am</td>
+		<td style="height: 25px; width: 92px;">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td>Monday</td>
-		<td style="width: 98px">February</td>
-		<td>25</td>
-		<td style="width: 92px">9:00a.m.</td>
+		<td>Investment</td>
+		<td style="width: 98px">February 25th</td>
+		<td style="width: 24px">9am</td>
+		<td style="width: 92px">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Monday</td>
-		<td style="height: 25px; width: 98px;">March</td>
-		<td style="height: 25px">25</td>
-		<td style="width: 92px; height: 25px;">9:00a.m.</td>
+		<td style="height: 25px">Investment</td>
+		<td style="height: 25px; width: 98px;">March 25th</td>
+		<td style="height: 25px; width: 24px;">9am</td>
+		<td style="width: 92px; height: 25px;">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td>Monday</td>
-		<td style="width: 98px">April</td>
-		<td>22</td>
-		<td style="width: 92px">9:00a.m.</td>
+		<td style="height: 25px">Investment</td>
+		<td style="width: 98px; height: 25px;">April 22nd</td>
+		<td style="width: 24px; height: 25px;">9am</td>
+		<td style="width: 92px; height: 25px;">
+		<a href="PDF/Agenda/2019/04_IC_AGENDA.pdf" target="_blank">Agenda</a><br/>Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Tuesday</td>
-		<td style="height: 25px; width: 98px;">May</td>
-		<td style="height: 25px">28</td>
-		<td style="width: 92px; height: 25px;">9:00a.m.</td>
+		<td style="height: 25px">Investment</td>
+		<td style="height: 25px; width: 98px;">May 28th</td>
+		<td style="height: 25px; width: 24px;">9am</td>
+		<td style="width: 92px; height: 25px;">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td>Monday</td>
-		<td style="width: 98px">June</td>
-		<td>24</td>
-		<td style="width: 92px">9:00a.m.</td>
+		<td>Investment</td>
+		<td style="width: 98px">June 24th</td>
+		<td style="width: 24px">9am</td>
+		<td style="width: 92px">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Monday</td>
-		<td style="height: 25px; width: 98px;">July</td>
-		<td style="height: 25px">22</td>
-		<td style="height: 25px; width: 92px;">9:00a.m.</td>
+		<td style="height: 25px">Investment</td>
+		<td style="height: 25px; width: 98px;">July 22nd</td>
+		<td style="height: 25px; width: 24px;">9am</td>
+		<td style="height: 25px; width: 92px;">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td>None</td>
-		<td class="auto-style4" style="width: 98px">August</td>
-		<td class="auto-style4">&nbsp;</td>
+		<td>Investment</td>
+		<td class="auto-style4" style="width: 98px">August - NONE</td>
+		<td class="auto-style4" style="width: 24px">&nbsp;</td>
 		<td style="width: 92px" class="auto-style4"></td>
 		</tr>
 		<tr>
-		<td>Monday</td>
-		<td style="width: 98px">September</td>
-		<td>23</td>
-		<td style="width: 92px">9:00a.m.</td>
+		<td>Investment</td>
+		<td style="width: 98px">September 23th</td>
+		<td style="width: 24px">9am</td>
+		<td style="width: 92px">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td>Monday</td>
-		<td style="width: 98px">October</td>
-		<td>28</td>
-		<td style="width: 92px">9:00a.m.</td>
+		<td>Investment</td>
+		<td style="width: 98px">October 28th</td>
+		<td style="width: 24px">9am</td>
+		<td style="width: 92px">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Monday</td>
-		<td style="height: 25px; width: 98px;">November</td>
-		<td style="height: 25px">18</td>
-		<td style="width: 92px; height: 25px;">9:00a.m.</td>
+		<td style="height: 25px">Investment</td>
+		<td style="height: 25px; width: 98px;">November 18th</td>
+		<td style="height: 25px; width: 24px;">9am</td>
+		<td style="width: 92px; height: 25px;">Agenda<br/>Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">None</td>
-		<td style="height: 25px; width: 98px;">December</td>
-		<td style="height: 25px"></td>
+		<td style="height: 25px">Investment</td>
+		<td style="height: 25px; width: 98px;">December - NONE</td>
+		<td style="height: 25px; width: 24px;"></td>
 		<td style="height: 25px; width: 92px;"></td>
 		</tr>
 		</table>
-		<br/> 
-	<h9>.</h9>	
-	<h6><a href="PDF/2019/MeetingDates2019.pdf" target="_blank">[Printable 
+	
+		<h6><a href="PDF/2019/MeetingDates2019.pdf" target="_blank">[Printable 
 		Monthly Meeting Schedule]</a></h6>
 		
 	
-		<h2>Meeting Minutes</h2>
+	<!--	<h2>Meeting Minutes</h2>
 		<h3>2019</h3>
 		<ul>
 		<li><a href="PDF/Minutes/2019/2019MINUTES01.pdf" target="_blank">JANUARY 31, 2019</a></li>
-		<li>February</li>
-		<li>March</li>
+		<li><a href="PDF/Minutes/2019/2019MINUTES02.pdf">FEBRUARY 28, 2019</a></li>
+		<li><a href="PDF/Minutes/2019/2019MINUTES03.pdf" target="_blank">March 28, 2019</a></li>
 		<li>April</li>
 		<li>May</li>
 		<li>June</li>
@@ -221,87 +222,95 @@ Release Date: August 2010
 		<li>December</li>
 		<li><a href="SubFolders/ArchiveMinites.html">Archive</a></li>
 		</ul>
-
+-->
 </div>
 <div class="contentmiddle">
-		<h2>2019 Board Meeting Dates</h2>
+		<h2>2019 Board Meetings</h2>
 		<table border="1">
 		<tr>
-		<td style="height: 25px">Thursday</td>
-		<td style="width: 92px; height: 25px;">January</td>
-		<td style="width: 40px; height: 25px;">31</td>
-		<td style="height: 25px">9:00 a.m.</td>
+		<td style="height: 25px">Board Meeting</td>
+		<td style="width: 92px; height: 25px;">January 31st</td>
+		<td style="width: 40px; height: 25px;">9am</td>
+		<td style="height: 25px">
+		<a href="PDF/Agenda/2019/2019AGENDA01.pdf" target="_blank">Agenda 
+		</a> 
+		<a href="PDF/Minutes/2019/2019MINUTES01.pdf" target="_blank">Minutes</a></td>
 		</tr>
 		<tr>
-		<td style="height: 23px">Thursday</td>
-		<td style="width: 92px; height: 23px;">February</td>
-		<td style="width: 40px; height: 23px;">28</td>
-		<td style="height: 23px">9:00 a.m.</td>
+		<td style="height: 23px">Board Meeting</td>
+		<td style="width: 92px; height: 23px;">February 28th</td>
+		<td style="width: 40px; height: 23px;">9am</td>
+		<td style="height: 23px">
+		<a href="PDF/Agenda/2019/2019AGENDA02.pdf" target="_blank">Agenda</a> 
+		<a href="PDF/Minutes/2019/2019MINUTES02.pdf" target="_blank">Minutes</a></td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Thursday</td>
-		<td style="width: 92px; height: 25px;">March</td>
-		<td style="height: 25px; width: 40px;">28</td>
-		<td style="height: 25px">9:00 a.m.</td>
+		<td style="height: 25px">Board Meeting</td>
+		<td style="width: 92px; height: 25px;">March 28th</td>
+		<td style="height: 25px; width: 40px;">9am</td>
+		<td style="height: 25px">
+		<a href="PDF/Agenda/2019/03AGENDAr.pdf" target="_blank">Agenda </a>
+		<a href="PDF/Minutes/2019/2019MINUTES03.pdf" target="_blank">Minutes</a></td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Thursday</td>
-		<td style="width: 92px; height: 25px;">April -<br/>No Disability Hearings</td>
-		<td style="width: 40px; height: 25px">25</td>
-		<td style="height: 25px">9:00 a.m.</td>
+		<td style="height: 25px">Board Meeting</td>
+		<td style="width: 92px; height: 25px;">April 25th</td>
+		<td style="width: 40px; height: 25px">9am</td>
+		<td style="height: 25px">
+		<a href="PDF/Agenda/2019/04AGENDA2.pdf" target="_blank">Agenda </a>Minutes</td>
 		</tr>
 		<tr>
-		<td>Friday</td>
-		<td style="width: 92px">May</td>
-		<td style="width: 40px">31</td>
-		<td>9:00 a.m.</td>
+		<td>Board Meeting</td>
+		<td style="width: 92px">May 31st</td>
+		<td style="width: 40px">9am</td>
+		<td>Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td>Thursday</td>
-		<td style="width: 92px">June</td>
-		<td style="width: 40px">27</td>
-		<td>9:00 a.m.</td>
+		<td>Board Meeting</td>
+		<td style="width: 92px">June 27th</td>
+		<td style="width: 40px">9am</td>
+		<td>Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Thursday</td>
-		<td style="width: 92px; height: 25px;">July</td>
-		<td style="width: 40px; height: 25px;">25</td>
-		<td style="height: 25px">9:00 a.m.</td>
+		<td style="height: 25px">Board Meeting</td>
+		<td style="width: 92px; height: 25px;">July 25th</td>
+		<td style="width: 40px; height: 25px;">9am</td>
+		<td style="height: 25px">Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Thursday</td>
-		<td style="width: 92px; height: 25px;">August</td>
-		<td style="height: 25px; width: 40px;">29</td>
-		<td style="height: 25px">9:00 a.m.</td>
+		<td style="height: 25px">Board Meeting</td>
+		<td style="width: 92px; height: 25px;">August 29th</td>
+		<td style="height: 25px; width: 40px;">9am</td>
+		<td style="height: 25px">Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td style="height: 25px">Thursday</td>
-		<td style="width: 92px; height: 25px;">September</td>
-		<td style="height: 25px; width: 40px;">26</td>
-		<td style="height: 25px">9:00 a.m.</td>
+		<td style="height: 25px">Board Meeting</td>
+		<td style="width: 92px; height: 25px;">September 26th</td>
+		<td style="height: 25px; width: 40px;">9am</td>
+		<td style="height: 25px">Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td>Thursday</td>
-		<td style="width: 92px">October</td>
-		<td style="width: 40px">31</td>
-		<td>9:00 a.m.</td>
+		<td>Board Meeting</td>
+		<td style="width: 92px">October 31st</td>
+		<td style="width: 40px">9am</td>
+		<td>Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td>Monday</td>
-		<td style="width: 92px">November</td>
-		<td style="width: 40px">25</td>
-		<td>9:00 a.m.</td>
+		<td>Board Meeting</td>
+		<td style="width: 92px">November 25th</td>
+		<td style="width: 40px">9am</td>
+		<td>Agenda Minutes</td>
 		</tr>
 		<tr>
-		<td>Friday</td>
-		<td style="width: 92px">December</td>
-		<td style="width: 40px">20</td>
-		<td>9:00 a.m.</td>
+		<td>Board Meeting</td>
+		<td style="width: 92px">December 20th</td>
+		<td style="width: 40px">9am</td>
+		<td>Agenda Minutes</td>
 		</tr>
 		</table>
 	
-		<h6><a href="PDF/INDEX.pdf" target="_blank">[Monthly Agenda Index and Summary]</a></h6>
-				<h2>Meeting Minutes</h2>
+		<h6><a href="SubFolders/ArchiveMinites.html" target="_blank">[Archived Minutes]</a></h6>
+	<!--			<h2>Meeting Minutes</h2>
 		<h3>2018</h3>
 		<ul>
 		<li><a href="PDF/Minutes/2018/2018MINUTES01.pdf" target="_blank">JANUARY 30, 2018</a></li>
@@ -318,6 +327,7 @@ Release Date: August 2010
 		<li><a href="PDF/Minutes/2018/2018MINUTES12.pdf" target="_blank">DECEMBER 21, 2018</a></li>
 		<li><a href="SubFolders/ArchiveMinites.html">Archive</a></li>
 		</ul>
+		-->
 		</div>
 <div class="contentright">
 <h2>Site Links</h2>
@@ -365,7 +375,7 @@ src="images/Icons/ICO_News.png" width="80" height="80" class="image-border" /></
 <li><a href="news.html">News &amp; Events</a></li>
 <li><a href="QILDRO.html">QILDRO</a></li>
 </ul>
-<!--webbot bot="Include" i-checksum="25228" endspan --><p>Policemen's Annuity &amp; Benefit Fund of Chicago Â© 2019 | All Rights Reserved</p>
+<!--webbot bot="Include" i-checksum="25228" endspan --><p>Policemen's Annuity &amp; Benefit Fund of Chicago © 2019 | All Rights Reserved</p>
 	<p>
 	Content By Executive Director | Layout Design by RTBWizards.com<!-- Histats.com START (standard)--> <script type="text/javascript">document.write(unescape("%3Cscript src=%27http://s10.histats.com/js15.js%27 type=%27text/javascript%27%3E%3C/script%3E"));</script> <a href="http://www.histats.com" target="_blank" title="counter" ><script type="text/javascript" > try {Histats.start(1,1652315,4,16,150,30,"00010000"); Histats.track_hits();} catch(err){}; </script></a> <noscript><a href="http://www.histats.com" target="_blank"><img src="http://sstatic1.histats.com/0.gif?1652315&101" alt="counter" border="0"></a></noscript> <!-- Histats.com END -->
 	 </p>
@@ -379,7 +389,7 @@ src="images/Icons/ICO_News.png" width="80" height="80" class="image-border" /></
 	<a href="email.html">
 <img alt="Contact Us" src="images/Icons/32x32Email-icon-button.png" width="32" height="32" longdesc="Templates/Contact Us" /></a>
 	<a href="http://www.cityofchicago.org/" target="_blank">
-<img alt="Web Link 5" src="../images/125x15Chicago%20Flag%20Drawn.jpg" width="32" height="32" longdesc="Templates/Web Link 5" /></a></p>
+<img alt="Web Link 5" src="../images_PABF/125x15Chicago%20Flag%20Drawn.jpg" width="32" height="32" longdesc="Templates/Web Link 5" /></a></p>
 </div>
 </div>
 
