--- a/tests/files/chi_north_river_mental_health_index.html
+++ b/tests/files/chi_north_river_mental_health_index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head><script src="/gdpr/gdprscript.js?buildTime=1598035318&hasRemindMe=true&stealth=false"></script>
+	<head><script src="/gdpr/gdprscript.js?buildTime=1598896322&hasRemindMe=true&stealth=false"></script>
 		<title>GOVERNING COMMISSION - Home</title><meta property="og:site_name" content="GOVERNING COMMISSION" />
 <meta property="og:title" content="GOVERNING COMMISSION" />
 <meta property="og:description" content="North River Expanded Mental Health Services Program Governing Commission Office 3525 West Peterson Avenue, #306 Chicago, IL 60659 Phone (Monitored Weekly): 917.443.9145 Email (Monitored Daily):..." />
@@ -16,10 +16,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 		
-		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/sites.css?buildTime=1598035318" />
-<link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/old/fancybox.css?1598035318" />
-<link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/social-icons.css?buildtime=1598035318" media="screen,projection" />
-<link rel="stylesheet" type="text/css" href="/files/main_style.css?1598291810" title="wsite-theme-css" />
+		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/sites.css?buildTime=1598896322" />
+<link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/old/fancybox.css?1598896322" />
+<link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/social-icons.css?buildtime=1598896322" media="screen,projection" />
+<link rel="stylesheet" type="text/css" href="/files/main_style.css?1598907462" title="wsite-theme-css" />
 <link href='//fonts.googleapis.com/css?family=Quattrocento+Sans:400,700,400italic,700italic&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link href='//fonts.googleapis.com/css?family=Quattrocento:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 
@@ -80,8 +80,8 @@ var STYLE_PREFIX = 'wsite';
 </script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
 
-<script type="text/javascript" src="//cdn2.editmysite.com/js/lang/en/stl.js?buildTime=1598035318&"></script>
-<script src="//cdn2.editmysite.com/js/site/main.js?buildTime=1598035318"></script><script type="text/javascript">
+<script type="text/javascript" src="//cdn2.editmysite.com/js/lang/en/stl.js?buildTime=1598896322&"></script>
+<script src="//cdn2.editmysite.com/js/site/main.js?buildTime=1598896322"></script><script type="text/javascript">
 		function initCustomerAccountsModels() {
 					(function(){_W.setup_rpc({"url":"\/ajax\/api\/JsonRPC\/CustomerAccounts\/","actions":{"CustomerAccounts":[{"name":"login","len":2,"multiple":false,"standalone":false},{"name":"logout","len":0,"multiple":false,"standalone":false},{"name":"getSessionDetails","len":0,"multiple":false,"standalone":false},{"name":"getAccountDetails","len":0,"multiple":false,"standalone":false},{"name":"getOrders","len":0,"multiple":false,"standalone":false},{"name":"register","len":4,"multiple":false,"standalone":false},{"name":"emailExists","len":1,"multiple":false,"standalone":false},{"name":"passwordReset","len":1,"multiple":false,"standalone":false},{"name":"passwordUpdate","len":3,"multiple":false,"standalone":false},{"name":"validateSession","len":1,"multiple":false,"standalone":false}]},"namespace":"_W.CustomerAccounts.RPC"});
 _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":"_W.CustomerAccounts.BackboneModelData","collection_namespace":"_W.CustomerAccounts.BackboneCollectionData","bootstrap_namespace":"_W.CustomerAccounts.BackboneBootstrap","models":{"CustomerAccounts":{"_class":"CustomerAccounts.Model.CustomerAccounts","defaults":null,"validation":null,"types":null,"idAttribute":null,"keydefs":null}},"collections":{"CustomerAccounts":{"_class":"CustomerAccounts.Collection.CustomerAccounts"}},"bootstrap":[]});
@@ -104,7 +104,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			_W.storeEuPrivacyPolicyUrl = "";
 			com_currentSite = "494816561908671119";
 			com_userID = "34884940";</script><script type="text/javascript">_W.resellerSite = true;</script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
-<script type="text/javascript" src="//cdn2.editmysite.com/js/lang/en/stl.js?buildTime=1598035318&"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "https://www.google.com/recaptcha/api.js"; </script><script type="text/javascript"><!--
+<script type="text/javascript" src="//cdn2.editmysite.com/js/lang/en/stl.js?buildTime=1598896322&"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "https://www.google.com/recaptcha/api.js"; </script><script type="text/javascript"><!--
 	
 	
 	function initFlyouts(){
@@ -216,7 +216,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 <div class="paragraph" style="text-align:center;"><em><u><font size="6" color="#3f3f3f">PUBLIC NOTICES</font></u></em></div>
 
-<div class="paragraph" style="text-align:center;"><span><strong><font size="6" color="#5040ae"><a href="/agenda.html">NOTICE</a></font></strong></span><br />Notice is hereby given that the<br />North River Expanded Mental Health Services<br />Program Governing Commission<br />Finance Committee<br />will hold its next meeting as listed below:<br />Date: Wednesday, August 26, 2020<br />Time: 6:00 PM<br />Place: Zoom Meeting<br />Agenda<br />I. Welcome<br />II. Presentation/Explanation of the 2019<br />Agency Tax Rate Report<br />III. Drafting of the 2021 Budget<br />IV. New Business<br />V. Adjournment<font color="#2a2a2a"><font size="3"><span style="color:rgb(0, 0, 0)"></span></font></font><br /><br /><span><font size="6"><strong><a href="/uploads/3/4/8/8/34884940/nremhsp_finance_com._aug._agenda.pdf" target="_blank"><font color="#3387a2">UPCOMING AGENDA</font><br />click here</a></strong></font></span></div>
+<div class="paragraph" style="text-align:center;"><span><strong><font size="6" color="#5040ae"><a href="/agenda.html">NOTICE</a></font></strong></span><br />Notice is hereby given that the<br />North River Expanded Mental Health Services<br />Program Governing Commission<br />will hold its next meeting as listed below:<br />Date: Wednesday, Sept. 16th, 2020<br />Time: 6:00 PM<br />Place: Zoom Meeting<br /><br /><br /><span><font size="6"><strong><a href="/uploads/3/4/8/8/34884940/nremhsp_finance_com._aug._agenda.pdf" target="_blank"><font color="#3387a2">UPCOMING AGENDA</font><br />click here</a></strong></font></span></div>
 
 
 					
@@ -335,7 +335,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
   <script type="text/javascript" src="/files/theme/plugins.js?1556830342"></script>
   <script type="text/javascript" src="/files/theme/custom.js?1556830342"></script>
     <div id="customer-accounts-app"></div>
-    <script src="//cdn2.editmysite.com/js/site/main-customer-accounts-site.js?buildTime=1598035318"></script>
+    <script src="//cdn2.editmysite.com/js/site/main-customer-accounts-site.js?buildTime=1598896322"></script>
 
 		<script type="text/javascript">
 	var _gaq = _gaq || [];
