--- a/tests/files/chi_northwest_home_equity.html
+++ b/tests/files/chi_northwest_home_equity.html
@@ -576,7 +576,7 @@ a,
                     <div class="info-text">
             	<strong><em>CALL US:</em></strong> 773-622-0700            </div>
 			<ul class="social-links">
-<li><a href="mailto:&#105;&#110;&#102;&#111;&#064;%6e%77h%65a%70&#046;%63%6f&#109;" target="_blank" rel="noopener" title="Send us an email" class="social-email"><i class="otb-fa otb-fa-envelope-o"></i></a></li><li><a class="search-btn"><i class="otb-fa otb-fa-search"></i></a></li></ul>                
+<li><a href="mailto:i&#110;%66%6f&#064;nwh%65%61&#112;%2ec&#111;m" target="_blank" rel="noopener" title="Send us an email" class="social-email"><i class="otb-fa otb-fa-envelope-o"></i></a></li><li><a class="search-btn"><i class="otb-fa otb-fa-search"></i></a></li></ul>                
     </div>
     <div class="clearboth"></div>
     
